<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/player_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_player"
        android:icon="@drawable/plus"
        android:title="@string/add_player"
        app:showAsAction="always" />
    <item
        android:id="@+id/clear_all"
        android:title="@string/clear_all_coming"
        app:showAsAction="never" />
    <item
        android:id="@+id/paste_coming_players"
        android:title="@string/paste_players"
        app:showAsAction="never" />
    <item
        android:id="@+id/make_teams"
        android:title="@string/make_teams"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_archived_players"
        android:title="@string/show_archived"
        app:showAsAction="never" />
</menu>
