<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <group
            android:id="@+id/menu_top"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_players"
                android:icon="@drawable/player"
                android:title="@string/nav_players" />
            <item
                android:id="@+id/nav_games"
                android:icon="@drawable/games"
                android:title="@string/nav_games_history" />
            <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/stats"
                android:title="@string/nav_statistics" />
        </group>
        <group
            android:id="@+id/menu_snapshot"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_save_snapshot"
                android:icon="@drawable/nav_backup"
                android:title="@string/nav_backup_to_file"
                android:visible="true" />
            <item
                android:id="@+id/nav_import_snapshot"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/nav_import_from_file"
                android:visible="true" />
        </group>
        <group
            android:id="@+id/menu_sync"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_data_sync"
                android:icon="@drawable/nav_cloud_push"
                android:title="@string/nav_sync_to_cloud"
                android:visible="true" />
            <item
                android:id="@+id/nav_data_pull"
                android:icon="@drawable/nav_cloud_pull"
                android:title="@string/nav_pull_from_cloud"
                android:visible="true" />
            <item
                android:id="@+id/nav_auth_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/nav_logout"
                android:visible="true" />
        </group>
        <group
            android:id="@+id/menu_help"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/nav_setting"
                android:title="@string/nav_settings"
                android:visible="true" />
            <item
                android:id="@+id/nav_getting_started"
                android:icon="@drawable/nav_start"
                android:title="@string/nav_getting_started"
                android:visible="true" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/nav_info"
                android:title="@string/nav_about"
                android:visible="true" />
        </group>
    </group>

</menu>
