<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_stat_search_players"
        android:title="@string/search_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_send_statistics"
        android:title="@string/action_send_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_last_10_games"
        android:title="@string/action_10_games"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_last_50_games"
        android:title="@string/action_50_games"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_no_limit"
        android:title="@string/action_all_games"
        app:showAsAction="never" />
</menu>
